Agentforce/force-app/main/default/objects/Suspension__c/Suspension__c.object-meta.xml
<CustomObject>
    <label>Suspension</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Suspension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>