Agentforce/force-app/main/default/objects/Suspension__c/fields/Legacy_Suspension_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Suspension_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy Suspension Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>