Agentforce/force-app/main/default/objects/Suspension__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>OCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>