Agentforce/force-app/main/default/objects/Suspension__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Removal</fullName>
            </value>
            <value>
                <fullName>Grievance against Individual</fullName>
            </value>
            <value>
                <fullName>Gross Misconduct</fullName>
            </value>
            <value>
                <fullName>Right to Work</fullName>
            </value>
            <value>
                <fullName>Medical Suspension</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>