Agentforce/force-app/main/default/objects/Suspension__c/fields/Suspension_CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>Suspension_CaseSafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suspension CaseSafeId</label>
    <type>Text</type>
</CustomField>