Agentforce/force-app/main/default/objects/Suspension__c/fields/Suspension_Contractual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Contractual_Hours__c</fullName>
    <label>Suspension Contractual Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>