Agentforce/force-app/main/default/objects/Suspension__c/fields/Suspension_Cost__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Cost__c</fullName>
    <formula>((Hourly_Rate__c * Suspension_Contractual_Hours__c)) * (((IF(ISBLANK(End_Date__c), TODAY(), End_Date__c) - Start_Date__c) / 7))</formula>
    <label>Suspension Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>