Agentforce/force-app/main/default/objects/Suspension__c/fields/Suspension_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Picklist__c</fullName>
    <label>Suspension Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>